update CSRF on profiles

--- a/templates/dentist_profile.html
+++ b/templates/dentist_profile.html
@@ -32,6 +32,7 @@
                     <div class="mb-4">
                         <h5>Profile Information</h5>
                         <form id="profileForm" method="POST" action="{{ url_for('update_dentist_profile') }}">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                             <div class="mb-3">
                                 <label for="firstName" class="form-label">First Name</label>
                                 <input type="text" class="form-control" id="firstName" name="first_name" value="{{ dentist.first_name }}" required>
